--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waterpark Wonderland Melaka - E-Portfolio</title>
+    <title>Group 1 HTT167</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -470,7 +470,7 @@
             <div class="container mx-auto px-4 md:px-6 py-3 md:py-4">
                 <div class="flex items-center justify-between">
                     <div class="text-base md:text-lg font-semibold tracking-tight">
-                        Waterpark Wonderland
+                        Group 1
                     </div>
                     <div class="hidden md:flex space-x-8 text-sm font-medium">
                         <a href="#home" class="nav-link text-gray-300 hover:text-white">Home</a>
@@ -1535,3 +1535,4 @@
     </script>
 </body>
 </html>
+
