--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
                 
                 <div class="glass-card rounded-xl p-4 md:p-8 border border-white/20">
                     <h3 class="text-lg md:text-xl font-medium mb-6 md:mb-8 text-center">Key Features</h3>
-                    <div class="grid md:grid-cols-3 gap-4 md:gap-6">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6">
                         <div class="text-center py-6 border-b md:border-b-0 md:border-r border-white/20">
                             <p class="text-sm font-medium mb-2">Water Slides</p>
                             <p class="text-xs text-gray-400">Thrilling water slides for all ages</p>
@@ -923,15 +923,15 @@
                             <p class="text-sm font-medium mb-2">Kid Area</p>
                             <p class="text-xs text-gray-400">Safe play area for children</p>
                         </div>
-                        <div class="text-center py-6 md:border-r border-white/20">
+                        <div class="text-center py-6 border-b md:border-b-0 md:border-r border-white/20">
                             <p class="text-sm font-medium mb-2">Food Stall</p>
                             <p class="text-xs text-gray-400">Food and beverage options</p>
                         </div>
-                        <div class="text-center py-6 md:border-r border-white/20">
+                        <div class="text-center py-6 border-b md:border-b-0 md:border-r border-white/20">
                             <p class="text-sm font-medium mb-2">Seating Area</p>
                             <p class="text-xs text-gray-400">Outdoor seating for visitors to sit and eat</p>
                         </div>
-                        <div class="text-center py-6">
+                        <div class="text-center py-6 md:border-r-0 border-white/20">
                             <p class="text-sm font-medium mb-2">Souvenir Store</p>
                             <p class="text-xs text-gray-400">Gift shop with merchandise and souvenirs</p>
                         </div>
@@ -1078,22 +1078,15 @@
 
                 <div class="mb-8 md:mb-12">
                     <h3 class="text-lg md:text-xl font-medium mb-4 md:mb-6">Videos</h3>
-                    <div class="grid md:grid-cols-2 gap-4 md:gap-6">
-                        <div class="glass-card border border-white/20 overflow-hidden rounded-xl">
-                            <div class="h-64 bg-gradient-to-br from-blue-500/20 to-cyan-500/20 flex items-center justify-center">
-                                <i class="fas fa-play text-gray-400 text-6xl"></i>
-                            </div>
-                            <div class="p-4">
-                                <p class="text-sm font-medium">Site Visit Documentation</p>
-                            </div>
+                    <div class="glass-card border border-white/20 overflow-hidden rounded-xl">
+                        <div class="w-full">
+                            <video controls class="w-full h-auto" style="max-height: 70vh;">
+                                <source src="photos/WhatsApp Video 2025-12-30 at 10.51.13 PM.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
-                        <div class="glass-card border border-white/20 overflow-hidden rounded-xl">
-                            <div class="h-64 bg-gradient-to-br from-blue-500/20 to-cyan-500/20 flex items-center justify-center">
-                                <i class="fas fa-play text-gray-400 text-6xl"></i>
-                            </div>
-                            <div class="p-4">
-                                <p class="text-sm font-medium">Facility Tour</p>
-                            </div>
+                        <div class="p-4">
+                            <p class="text-sm font-medium">Site Visit Vlog</p>
                         </div>
                     </div>
                 </div>
